[project]
name = "mcp-use"
version = "1.4.1"
description = "MCP Library for LLMs"
authors = [
    {name = "mcp-use, Inc.", email = "dev@mcp-use.io"},
    {name = "Pietro Zullo", email = "pietro.zullo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.10.0",
    "langchain>=1.0.0",
    "websockets>=15.0",
    "httpx>=0.27.1",
    "pydantic>=2.11.0,<3.0.0",
    "jsonschema-pydantic>=0.1.0",
    "python-dotenv>=1.0.0",
    "posthog>=3.0.0",
    "scarf-sdk>=0.1.0",
    "authlib>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "fastmcp>=2.13.0",
    "fastapi>=0.100.0",
    "pre-commit>=4.5.0"
]
anthropic = [
    "langchain_anthropic",
]
openai = [
    "langchain_openai",
]
search = [
    "fastembed>=0.3.0",
]
e2b = [
    "e2b-code-interpreter>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
